--- a/MosaicProject/MosaicProject/src/main/webapp/resources/css/common.css
+++ b/MosaicProject/MosaicProject/src/main/webapp/resources/css/common.css
@@ -79,12 +79,18 @@
     height: 510px;
 }
 
+#pp{
+    width: 200px;
+    height:100px;
+}
+
 .mosaic_baseimages img,.baseimage_none{
 	width: 150px;
     display: block;
     border: 1px solid gray;
     cursor: pointer;
-    height: 100px;}
+    height: 100px;
+}
 
 .btndiv_1{
     width: 85px;
@@ -112,7 +118,12 @@
     float: left;
     margin: 9px 5px 5px 0px;
 }
-
+.pp{
+	border: 3px solid #000000;
+    width: 200px;
+    height:100px;
+	margin-left: auto;
+}
 
 /*common*/
 
