--- a/MosaicProject/MosaicProject/src/main/webapp/resources/css/common.css
+++ b/MosaicProject/MosaicProject/src/main/webapp/resources/css/common.css
@@ -118,12 +118,7 @@
     float: left;
     margin: 9px 5px 5px 0px;
 }
-.pp{
-	border: 3px solid #000000;
-    width: 200px;
-    height:100px;
-	margin-left: auto;
-}
+
 
 /*common*/
 
@@ -296,5 +291,20 @@
 .clr{
 	  clear:both;
 }
+
+/*privacypolicy*/
+.pr_title { font-weight:bold; }
+
+#pp_wrapper{
+    width: 800px;
+    margin: 0 auto;
+    background-color: white;
+    border-radius: 5px;
+    padding: 50px;
+}
+
+
+
+
 
 
