--- a/MosaicProject/MosaicProject/src/main/webapp/resources/css/common.css
+++ b/MosaicProject/MosaicProject/src/main/webapp/resources/css/common.css
@@ -118,7 +118,12 @@
     float: left;
     margin: 9px 5px 5px 0px;
 }
-
+.pp{
+	border: 3px solid #000000;
+    width: 200px;
+    height:100px;
+	margin-left: auto;
+}
 
 /*common*/
 
